# fastapi_alembic

./: .gitignore  .pre-commit-config.yaml  alembic.ini  main.py  pyproject.toml
alembic/: env.py
alembic/data/: students.json
alembic/versions/: 4763f103a36e_.py  b3f33694a366_move_is_active_to_user_table.py
api/: courses.py  sections.py  users.py
api/utils/: courses.py  users.py
db/: db_setup.py
models/: course.py  user.py
schemas/: user.py
