[tool.poetry]
name = "fastapi_faraday"
version = "0.1.0"
description = ""
authors = ["Mark Nzei <nzeimark@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
uvicorn = "^0.17.6"
fastapi = "^0.77.1"
pydantic = "^1.9.0"
SQLAlchemy = "^1.4.36"
psycopg2-binary = "^2.9.3"
pytest = "^7.1.2"
SQLAlchemy-Utils = "^0.38.2"
alembic = "^1.7.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
