[tool.poetry]
name = "fastapi_faraday"
version = "0.1.0"
description = ""
authors = ["Mark Nzei <nzeimark@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
uvicorn = "^0.17.6"
fastapi = "^0.77.1"
pydantic = "^1.9.0"
SQLAlchemy = "^1.4.36"
psycopg2-binary = "^2.9.3"
pytest = "^7.1.2"
SQLAlchemy-Utils = "^0.38.2"
alembic = "^1.7.7"
asyncpg = "^0.26.0"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
black = "^22.6.0"
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[flake8]
ignore = ["E203", "E266", "E501", "W503", "F403", "F401"]
max-line-length = 79
max-complexity = 18
select = ["B", "C", "E", "F", "W", "T4", "B9"]

[tool.black]
line-length = 79
target-version = ['py37']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
  | migrations
  | alembic
)/
'''
